# playground

./: .gitignore  .gitmodules  README.md
aws/: .gitignore
aws/01_sqs/: .gitignore  docs.md  main.tf  package-lock.json  package.json  tsconfig.json
aws/02_serverless-queue/: README.md  main.tf  package.json
aws/03_serverless-docker/: .gitignore  README.md  tsconfig.json
aws/04_sql_ecr_ecs/: .gitignore  Dockerfile  README.md  docker-compose.yml  loca.env  package-lock.json  package.json  tsconfig.json
aws/04_sqs-cloudwatch-ec2/: .gitignore  README.md  package-lock.json
aws/04_sqs_ecr_ecs/: docker-compose.yml
aws/05_cloudfront/: .terraform.tfstate.lock.info  README.md  certificate.tf  main.tf  output.tf  vars.tf
aws/05_cloudfront_ec2/: README.md  bootstrap.sh  certificate.tf  cloudfront.tf  id_rsa.pub  main.tf  output.tf  route53.tf  security_groups.tf  vars.tf  vpc.tf
aws/06_lambda/: .env  .gitignore  .terraform.lock.hcl  README.md  build.sh  main.tf  package-lock.json  package.json  template.yaml  tsconfig.json
aws/06_lambda_php/: README.md
aws/06_lambda_python/: .gitignore  README.md  deploy.sh  main.tf
aws/07_elastic-beanstalk/: package-lock.json
aws/08_S3/: s3.tf  terraform.tfstate
aws/08_S3-basic-auth/: README.md  main.tf  vars.tf
caddy/: note.md
gnome/eth/: Cargo.toml
gnome/eth/data/: com.example.EthereumPrice.desktop
gnome/eth/src/: main.rs
nginx/: README.md
openlitespeed/: notes.md  todo.md
rust/stochastics/: .gitignore  Cargo.toml  README.md  config.json  create-examples.sh
rust/stochastics/muestra/: README.md
rust/stochastics/src/: config.rs  main.rs  processor.rs
rust/woocommerce_client/: Cargo.toml  README.md  config-examaple.ini  product_structure.json
rust/woocommerce_client/src/: main.rs
rust/woocommerce_client/src/integrations/: mod.rs  woocommerce.rs
rust/woocommerce_client/templates/: products.html
tailwind/: README.md  index.php  package-lock.json  package.json  style.css
tor/: README.md  docker-compose.yml
(+325 files in other folders)
