[package]
name = "eth-gnome"
version = "0.1.0"
edition = "2024"

[dependencies]
async-channel = "2.5.0"
attohttpc = { version = "0.30.1", features = ["json"] }
chrono = "0.4.44"
gdk = "0.18"
gio = "0.18"
glib = "0.18"
gtk = { version = "0.18.2", features = ["v3_24"] }
pango = "0.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[profile.release]
opt-level = "z"  # Optimize for size
lto = true       # Link Time Optimization
codegen-units = 1 # Maximum optimization
panic = "abort"  # Remove panic unwinding
strip = true     # Strip symbols
