[package]
name = "stochastics"
version = "1.2.0"
edition = "2021"

[dependencies]
image = "0.24"
clap = { version = "4.4", features = ["derive"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
exif = { package = "kamadak-exif", version = "0.6.1" }

[profile.release]
opt-level = "z"  # Optimize for size
lto = true       # Link Time Optimization
codegen-units = 1 # Maximum optimization
panic = "abort"  # Remove panic unwinding
strip = true     # Strip symbols
