[package]
name = "woocommerce_client"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"
config = "0.14"
dirs = "5"
xlsxwriter = "0.6"
chrono = "0.4"
url = "2"